--- a/src/main/resources/templates/updateUserDetails.html
+++ b/src/main/resources/templates/updateUserDetails.html
@@ -266,7 +266,7 @@
       </div>
     </main>
     <footer>
-      <nav class="bg-slate-50">
+      <nav>
         <ul>
           <li></li>
           <li>
