--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -89,7 +89,7 @@
     height: 3rem;
     flex-shrink: 0;
     color: #fff;
-    background-color: #c1c1c1;
+    background-color: #304e7e;
     width: 100%;
   }
 
@@ -426,21 +426,3 @@
 
 
 }
-
-
-  /* #search-results {
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    max-height: 16rem;
-    overflow-y: auto;
-    background: white;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 0.5rem;
-    width: 100%;
-  }
-
-  .search-container {
-    position: relative;
-  } */
