--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -835,7 +835,7 @@ footer {
   height: 3rem;
   flex-shrink: 0;
   color: #fff;
-  background-color: #c1c1c1;
+  background-color: #304e7e;
   width: 100%;
 }
 
@@ -1523,6 +1523,11 @@ label {
   background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
 }
 
+.bg-blue-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity, 1));
+}
+
 .bg-blue-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(30 64 175 / var(--tw-bg-opacity, 1));
@@ -1949,23 +1954,6 @@ label {
   display: none;
   /* Chrome, Safari, and Edge */
 }
-
-/* #search-results {
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    max-height: 16rem;
-    overflow-y: auto;
-    background: white;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 0.5rem;
-    width: 100%;
-  }
-
-  .search-container {
-    position: relative;
-  } */
 
 .hover\:bg-blue-700:hover {
   --tw-bg-opacity: 1;
