--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/output.css" />
     <script th:src="@{/js/fadeAnimations.js}" defer></script>
   </head>
-  <body>
+  <body class="bg-blue-700">
     <main class="top-0 bottom-0 bg-blue-500">
 
       <!-- ERROR AND SUCCESS HANDLING -->
