--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -10,6 +10,24 @@
 
   </head>
   <body>
+
+
+    <!-- ERROR AND SUCCESS HANDLING -->
+    <div class="errorSuccessHandlingBox hidden">
+      <div
+        id="successMessageDiv"
+        class="success"
+        th:if="${message}"
+        th:text="${message}">
+      </div>
+      <div
+        id="errorMessageDiv"
+        class="failure"
+        th:if="${error}"
+        th:text="${error}">
+      </div>
+    </div>
+
     <header>
       <nav>
         <ul>
@@ -39,25 +57,7 @@
       </nav>
     </header>
 
-    <main>
-
-      <!-- ERROR AND SUCCESS HANDLING -->
-      <div class="errorSuccessHandlingBox hidden">
-        <div
-          id="successMessageDiv"
-          class="success"
-          th:if="${message}"
-          th:text="${message}">
-        </div>
-        <div
-          id="errorMessageDiv"
-          class="failure"
-          th:if="${error}"
-          th:text="${error}">
-        </div>
-      </div>
-
-
+    <main class="overflow-y-auto">
       <div
         class="h-auto w-full pt-3"
       >
@@ -189,47 +189,32 @@
           </a>
         </div>
 
-      <!-- ERROR AND SUCCESS HANDLING -->
-      <div class="errorSuccessHandlingBox hidden">
-        <div
-          id="successMessageDiv"
-          class="success"
-          th:if="${message}"
-          th:text="${message}">
-        </div>
-        <div
-          id="errorMessageDiv"
-          class="failure"
-          th:if="${error}"
-          th:text="${error}">
-        </div>
-      </div>
 
-      <div class="w-full min-h-fit overflow-y-auto">
-        <div class="grid">
-          <div
-            th:each="row : ${partitionedCollections}"
-            class="grid grid-cols-3 border-0"
-          >
+        <div class="w-full">
+          <div class="grid">
             <div
-              th:each="collection : ${row}"
-              class="flex flex-col items-center"
+              th:if="${partitionedCollections != null}"
+              th:each="row : ${partitionedCollections}"
+              class="grid grid-cols-3 border-0"
             >
-              <a th:href="@{/collection/{id}(id=${collection.id})}">
-                <img
-                  th:src="${#strings.defaultString(collection?.getImageUrl(), '/images/default-image.png')}"
-                  alt="Collection Image"
-                  class="aspect-square w-full h-auto object-cover"
-                />
-              </a>
+              <div
+                th:each="collection : ${row}"
+                class="flex flex-col items-center"
+              >
+                <a th:href="@{/collection/{id}(id=${collection.id})}">
+                  <img
+                    th:src="${#strings.defaultString(collection.imageUrl, '/images/default-image.png')}"
+                    alt="Collection Image"
+                    class="aspect-square w-full h-auto object-cover"
+                  />
+                </a>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    </main>
-    <footer>
-      <nav>
+      <footer>
+        <nav>
           <ul>
             <li>
               <div id="homeButton" class="icon">
@@ -258,8 +243,7 @@
               </a>
             </li>
           </ul>
-        </div>
-      </main>
-    </footer>
-  </body>
+        </nav>
+      </footer>
+    </body>
 </html>
