--- a/src/main/resources/templates/itemComment.html
+++ b/src/main/resources/templates/itemComment.html
@@ -123,7 +123,7 @@
             <!-- ITEM PICTURE -->
             <a>
               <img
-                class="aspect-square w-full bg-white"
+                class="square"
                 id="previewImage"
                 th:src="${item != null && item.imageUrl != null ? item.imageUrl : '/images/item_image.png'}"
                 alt="Item Image"
