--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -88,7 +88,7 @@
           <div class="square-index">
             <!-- ITEM PICTURE -->
             <img
-              class="square-index"
+              class="square"
               id="previewImage"
               th:src="${item != null && item.imageUrl != null ? item.imageUrl : '/images/item_image.png'}"
               alt="Item Image"
@@ -279,6 +279,12 @@
                 <a class="text-2xl font-bold" href="/index">&#8962;</a>
               </div>
             </li>
+            <li>
+              <div class="icon">
+                <a class="text-2xl font-bold" href="/popular">&#10066;</a>
+              </div>
+            </li>
+            <li></li>
             <li>
               <a href="/profile">
                 <img
