--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -61,6 +61,7 @@
       <div
         class="h-auto w-full pt-3"
       >
+      <div class="border-bottom border-slate-200 shadow-sm">
         <!-- PROFILE CONTENT -->
         <div class="flex flex-col justify-start items-start w-full px-2">
           <!-- PROFILE INFO HEADER -->
@@ -188,6 +189,7 @@
             Share Profile
           </a>
         </div>
+      </div>
 
 
         <div class="w-full">
