--- a/src/main/resources/templates/createCollection.html
+++ b/src/main/resources/templates/createCollection.html
@@ -59,10 +59,15 @@
           </span>
         </nav>
 
-        <div
-          class="box pb-3"
-          style="border-bottom: 1px solid rgba(148, 163, 184, 0.25)"
+
+        <form
+          id="createCollectionForm"
+          class="flex flex-col w-full items-center justify-center"
+          action="/create_collection"
+          method="post"
+          enctype="multipart/form-data"
         >
+
           <div class="square">
             <img
               class="aspect-square w-full"
@@ -71,63 +76,61 @@
               alt="Default Collection Image"
             />
           </div>
-          <a href="#" id="triggerUpload" class="mt-2">
-            <span class="text-sm font-semibold text-blue-500">
-              Update Collection Cover
-            </span>
-          </a>
-        </div>
 
-        <form
-          class="flex flex-col w-full items-center justify-center px-4 mt-4"
-          action="/create_collection"
-          method="post"
-          enctype="multipart/form-data"
-        >
-          <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
-          <!-- File Upload Field -->
-
-          <input
-            type="file"
-            id="hiddenFileInput"
-            name="collectionImage"
-            style="display: none"
-            accept="image/*"
-          />
-
-          <!-- Title Field -->
-          <div class="flex flex-col w-full h-auto justify-center items-between">
-            <div class="labelInputBox w-full">
-              <label class="label" for="title">Title:</label>
-              <input
-                class="input w-full"
-                type="text"
-                id="collectionTitle"
-                name="title"
-                placeholder="Title"
-              />
+          <div class="w-full flex flex-col justify-center items-center px-4 mt-4">
+            <div>
+              <a href="#" id="triggerUpload" class="mt-2">
+                <span class="text-sm font-semibold text-blue-500">
+                  Update Collection Cover
+                </span>
+              </a>
             </div>
-          </div>
 
-          <!-- Caption Field -->
-          <div class="flex flex-col w-full h-auto justify-center items-between">
-            <div class="labelInputBox w-full">
-              <label class="label" for="caption">Caption:</label>
-              <input
-                class="input w-full"
-                type="text"
-                id="caption"
-                name="caption"
-                placeholder="Caption"
-              />
+            <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
+            <!-- File Upload Field -->
+
+            <input
+              type="file"
+              id="hiddenFileInput"
+              name="collectionImage"
+              style="display: none"
+              accept="image/*"
+            />
+
+            <!-- Title Field -->
+            <div class="flex flex-col w-full h-auto justify-center items-between">
+              <div class="labelInputBox w-full">
+                <label class="label" for="title">Title:</label>
+                <input
+                  class="input w-full"
+                  type="text"
+                  id="collectionTitle"
+                  name="title"
+                  placeholder="Title"
+                />
+              </div>
             </div>
-          </div>
 
-          <!-- Submit Button -->
-          <div class="flex flex-row justify-center items-center mt-4">
-            <button class="button bg-blue-600 hover:bg-blue-800" type="submit">
-              Create Collection
-            </button>
+            <!-- Caption Field -->
+            <div class="flex flex-col w-full h-auto justify-center items-between">
+              <div class="labelInputBox w-full">
+                <label class="label" for="caption">Caption:</label>
+                <input
+                  class="input w-full"
+                  type="text"
+                  id="caption"
+                  name="caption"
+                  placeholder="Caption"
+                />
+              </div>
+            </div>
+
+            <!-- Submit Button -->
+            <div class="flex flex-row justify-center items-center mt-4">
+              <button class="button bg-blue-600 hover:bg-blue-800" type="submit">
+                Create Collection
+              </button>
+            </div>
           </div>
         </form>
       </div>
