--- a/src/main/resources/templates/updateCollection.html
+++ b/src/main/resources/templates/updateCollection.html
@@ -33,125 +33,133 @@
         </nav>
       </header>
 
-    <main class="bottom-0 overflow-y-auto">
+      <main class="bottom-0 overflow-y-auto">
 
-      
-      <!-- ERROR AND SUCCESS HANDLING -->
-      <div class="errorSuccessHandlingBox hidden">
-        <div
-          id="successMessageDiv"
-          class="success"
-          th:if="${message}"
-          th:text="${message}">
-        </div>
-        <div
-          id="errorMessageDiv"
-          class="failure"
-          th:if="${error}"
-          th:text="${error}">
-        </div>
-      </div>
-
-
-      <div class="container">
-        <nav>
-          <span class="w-full text-center text-sm font-semibold text-slate-600">
-            Update Collection
-          </span>
-        </nav>
-
-        <div class="box pb-3">
-          <div class="square">
-            <img
-              class="aspect-square w-full"
-              id="previewImage"
-              th:src="${collection?.imageUrl != null ? collection.imageUrl : '/images/collection_image.png'}"
-              alt="Collection Image"
-            />
+        <!-- ERROR AND SUCCESS HANDLING -->
+        <div class="errorSuccessHandlingBox hidden">
+          <div
+            id="successMessageDiv"
+            class="success"
+            th:if="${message}"
+            th:text="${message}">
           </div>
-          <a href="#" id="triggerUpload" class="mt-2">
-            <span class="text-sm font-semibold text-blue-500">
-              Update Collection Cover
+          <div
+            id="errorMessageDiv"
+            class="failure"
+            th:if="${error}"
+            th:text="${error}">
+          </div>
+        </div>
+
+
+        <div class="container">
+          <nav>
+            <span class="w-full text-center text-sm font-semibold text-slate-600">
+              Update Collection
             </span>
-          </a>
+          </nav>
 
+          <form
+            id="updateCollectionForm"
+            class="flex flex-col w-full items-center justify-center"
+            th:action="@{/update-collection/{id}(id=${collection.id})}"
+            method="post"
+            enctype="multipart/form-data">
 
-        <form 
-          class="flex flex-col w-full items-center justify-center px-4 mt-4"
-          th:action="@{/update-collection/{id}(id=${collection.id})}" 
-          method="post" 
-          enctype="multipart/form-data">
-
-              <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
-              <!-- File Upload Field -->
-
-              <input
-                type="file"
-                id="hiddenFileInput"
-                name="collectionImage"
-                style="display: none"
-                accept="image/*"
-              />
-
-              <!-- Title Field -->
-              <div class="flex flex-col w-full h-auto justify-center items-between">
-                <div class="labelInputBox w-full">
-                  <label class="label" for="title">Title:</label>
-                  <input
-                    class="input w-full"
-                    type="text"
-                    id="collectionTitle"
-                    name="title"
-                    th:value="${collection?.title}"
-                    placeholder="Title"
-                  />
-                </div>
+              <div class="square">
+                <img
+                  class="aspect-square w-full"
+                  id="previewImage"
+                  th:src="${collection?.imageUrl != null ? collection.imageUrl : '/images/collection_image.png'}"
+                  alt="Collection Image"
+                />
               </div>
-
-              <!-- Caption Field -->
-              <div class="flex flex-col w-full h-auto justify-center items-between">
-                <div class="labelInputBox w-full">
-                  <label class="label" for="caption">Caption:</label>
-                  <input
-                    class="input w-full"
-                    type="text"
-                    id="caption"
-                    name="caption"
-                    th:value="${collection?.caption}"
-                    placeholder="Caption"
-                  />
+              <div class="w-full flex flex-col justify-center items-center px-4 mt-4">
+                <div>
+                  <a href="#" id="triggerUpload" class="mt-2">
+                    <span class="text-sm font-semibold text-blue-500">
+                      Update Collection Cover
+                    </span>
+                  </a>
                 </div>
-              </div>
 
-              <!-- Submit Button -->
-              <div class="flex flex-row justify-center items-center mt-4">
-                <button class="button bg-blue-600 hover:bg-blue-800" type="submit">
-                  Update Collection
-                </button>
+                <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
+                <!-- File Upload Field -->
+
+                <input
+                  type="file"
+                  id="hiddenFileInput"
+                  name="collectionImage"
+                  style="display: none"
+                  accept="image/*"
+                />
+
+                <!-- Title Field -->
+                <div class="flex flex-col w-full h-auto justify-center items-between">
+                  <div class="labelInputBox w-full">
+                    <label class="label" for="title">Title:</label>
+                    <input
+                      class="input w-full"
+                      type="text"
+                      id="collectionTitle"
+                      name="title"
+                      th:value="${collection?.title}"
+                      placeholder="Title"
+                    />
+                  </div>
+                </div>
+
+                <!-- Caption Field -->
+                <div class="flex flex-col w-full h-auto justify-center items-between">
+                  <div class="labelInputBox w-full">
+                    <label class="label" for="caption">Caption:</label>
+                    <input
+                      class="input w-full"
+                      type="text"
+                      id="caption"
+                      name="caption"
+                      th:value="${collection?.caption}"
+                      placeholder="Caption"
+                    />
+                  </div>
+                </div>
+
+                <!-- Submit Button -->
+                <div class="flex flex-row justify-center items-center mt-4">
+                  <button class="button bg-blue-600 hover:bg-blue-800" type="submit">
+                    Update Collection
+                  </button>
+                </div>
               </div>
             </form>
           </div>
         </div>
-
-        <div
-          class="flex flex-col w-full items-center justify-center pt-16 bg-[#f8fafc]"
-        >
-          <form th:action="@{/delete-collection/{id}(id=${collection.id})}" method="post">
-
-            <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
-            <div>
-              <button
-                class="small-button bg-red-600 hover:bg-red-800"
-                type="submit"
-                onclick="return confirm('Are you sure you want to delete this collection? This action cannot be undone.');"
-              >
-                Delete
-              </button>
-            </div>
-          </form>
-        </div>
       </div>
     </main>
+    <footer>
+      <nav>
+        <ul>
+          <li></li>
+          <li>
+            <div class="h-full w-full flex flex-col items-center justify-end">
+              <form th:action="@{/delete-collection/{id}(id=${collection.id})}" method="post">
+                <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
+                <div>
+                  <button
+                    class="small-button bg-red-600 hover:bg-red-800 w-40"
+                    type="submit"
+                    onclick="return confirm('Are you sure you want to delete this collection? This action cannot be undone.');"
+                  >
+                    Delete Collection
+                  </button>
+                </div>
+              </form>
+            </div>
+          </li>
+          <li></li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
 
