--- a/src/main/resources/templates/updateItem.html
+++ b/src/main/resources/templates/updateItem.html
@@ -30,7 +30,7 @@
         </ul>
       </nav>
     </header>
-    <main class="bottom-0 overflow-y-auto">
+    <main class="bottom-12 overflow-y-auto">
 
 
       
@@ -57,7 +57,17 @@
             Update Item
           </span>
         </nav>
-        <div class="box pb-3">
+
+        <div class="scrollable-container h-100vh">
+          <form
+            id="updateItemForm"
+            class="flex flex-col w-full items-center justify-center"
+            th:action="@{/update-item/{id}(id=${item.id})}"
+            method="post"
+            enctype="multipart/form-data"
+          >
+
+
           <div class="square">
             <img
               class="aspect-square w-full"
@@ -66,19 +76,16 @@
               alt="Collection Image"
             />
           </div>
-          <a href="#" id="triggerUpload" class="mt-2">
-            <span class="text-sm font-semibold text-blue-500">
-              Update Item Image
-            </span>
-          </a>
+          <div class="w-full flex flex-col justify-center items-center px-4 mt-4">
+            <div>
+              <a href="#" id="triggerUpload" class="mt-2">
+                <span class="text-sm font-semibold text-blue-500">
+                  Update Item Image
+                </span>
+              </a>
+            </div>
 
-          <div class="scrollable-container h-100vh">
-            <form
-              class="flex flex-col w-full items-center justify-center px-4 mt-4"
-              th:action="@{/update-item/{id}(id=${item.id})}"
-              method="post"
-              enctype="multipart/form-data"
-            >
+
               <input
                 type="hidden"
                 name="collectionId"
@@ -165,7 +172,7 @@
               </div>
 
               <!-- Submit Button -->
-              <div class="flex flex-row justify-center items-center mt-4">
+              <div class="flex flex-row justify-center items-center mt-4 pb-8">
                 <button
                   class="button bg-blue-600 hover:bg-blue-800"
                   type="submit"
@@ -173,10 +180,17 @@
                   Update Item
                 </button>
               </div>
-            </form>
-            <div
-              class="flex flex-col w-full items-center justify-center pt-16 pb-4 bg-[#f8fafc]"
-            >
+            </div>
+          </form>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <nav>
+        <ul>
+          <li></li>
+          <li>
+            <div class="h-full w-full flex flex-col items-center justify-end">
               <form
                 th:action="@{/delete-item/{id}(id=${item.id})}"
                 method="post"
@@ -184,18 +198,19 @@
                 <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
                 <div>
                   <button
-                    class="small-button bg-red-600 hover:bg-red-800"
+                    class="small-button bg-red-600 hover:bg-red-800 w-40"
                     type="submit"
                     onclick="return confirm('Are you sure you want to delete this collection? This action cannot be undone.');"
                   >
-                    Delete
+                    Delete Item
                   </button>
                 </div>
               </form>
             </div>
-          </div>
-        </div>
-      </div>
-    </main>
+          </li>
+          <li></li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
