--- a/src/main/resources/templates/updateProfile.html
+++ b/src/main/resources/templates/updateProfile.html
@@ -54,33 +54,34 @@
 
       <div class="container">
         <div class="box">
-          <div class="flex flex-col justify-center items-center mt-8 p-2">
-            <!-- PROFILE PICTURE -->
-            <a>
-              <img
-                class="h-32 w-32 rounded-full bg-white"
-                id="previewImage"
-                th:src="${user != null and user.profilePictureUrl != null and user.profilePictureUrl != ''} ? ${user.profilePictureUrl} : '/images/default-profile-photo.png'"
-                alt="Profile Picture"
-              />
-            </a>
-
-            <!-- UPDATE PROFILE PICTURE BUTTON -->
-            <a href="#" id="triggerUpload" class="mt-2">
-              <span class="text-sm font-semibold text-blue-500 mb-1">
-                Update Profile Picture
-              </span>
-            </a>
-
-
-          </div>
-          <div class="flex-col justify-center items-center w-full p-4">
+          <div class="flex-col justify-center items-center w-full px-4">
             <form
+              id="updateProfileForm"
               th:action="@{/update_profile}"
               method="post"
               enctype="multipart/form-data"
-              id="updateProfileForm"
             >
+              <div class="flex flex-col justify-center items-center mt-8 p-2">
+                <!-- PROFILE PICTURE -->
+                <a>
+                  <img
+                    class="h-32 w-32 rounded-full bg-white"
+                    id="previewImage"
+                    th:src="${user != null and user.profilePictureUrl != null and user.profilePictureUrl != ''} ? ${user.profilePictureUrl} : '/images/default-profile-photo.png'"
+                    alt="Profile Picture"
+                  />
+                </a>
+
+                <!-- UPDATE PROFILE PICTURE BUTTON -->
+                <a href="#" id="triggerUpload" class="mt-2 pb-4">
+                  <span class="text-sm font-semibold text-blue-500 mb-1">
+                    Update Profile Picture
+                  </span>
+                </a>
+
+
+              </div>
+
               <!-- Update Profile Picture -->
               <div class="labelInputBox">
                 <input
