compensate for iphone orientation issues with images

--- a/src/main/resources/templates/createCollection.html
+++ b/src/main/resources/templates/createCollection.html
@@ -7,7 +7,8 @@
 
     <title>Create Collection</title>
     <link rel="stylesheet" href="/css/output.css" />
-
+    
+    <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
     <script th:src="@{/js/previewFile.js}" defer></script>
     <script th:src="@{/js/fadeAnimations.js}" defer></script>
   </head>
