--- a/src/main/resources/templates/createItem.html
+++ b/src/main/resources/templates/createItem.html
@@ -8,6 +8,7 @@
     <title>Create Item</title>
     <link rel="stylesheet" href="/css/output.css" />
 
+    <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
     <script th:src="@{/js/previewFile.js}" defer></script>
     <script th:src="@{/js/fadeAnimations.js}" defer></script>
   </head>
