--- a/src/main/resources/templates/updateCollection.html
+++ b/src/main/resources/templates/updateCollection.html
@@ -8,7 +8,9 @@
     <title>Login</title>
     <link rel="stylesheet" href="/css/output.css" />
 
+    <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
     <script th:src="@{/js/previewFile.js}" defer></script>
+    <script th:src="@{/js/fadeAnimations.js}" defer></script>
 
   </head>
   <body>
