--- a/src/main/resources/templates/updateItem.html
+++ b/src/main/resources/templates/updateItem.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8" />
 
     <title>Login</title>
-    <link rel="stylesheet" href="/css/output.css" />
+    <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
+    <script th:src="@{/js/previewFile.js}" defer></script>
+    <script th:src="@{/js/fadeAnimations.js}" defer></script>
 
     <script th:src="@{/js/previewFile.js}" defer></script>
   </head>
