--- a/src/main/resources/templates/updateProfile.html
+++ b/src/main/resources/templates/updateProfile.html
@@ -5,11 +5,12 @@
     <title>User Profile</title>
     <link rel="stylesheet" th:href="@{/css/output.css}" />
 
+    <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
     <script th:src="@{/js/accountDetails.js}" defer></script>
     <script th:src="@{/js/toggleProfilePhoto.js}" defer></script>
-    <script th:src="@{/js/fadeAnimations.js}" defer></script>
     <script th:src="@{/js/updateChanges.js}" defer></script>
     <script th:src="@{/js/previewFile.js}" defer></script>
+    <script th:src="@{/js/fadeAnimations.js}" defer></script>
   </head>
   <body>
     <header>
